--- a/.gitconfig
+++ b/.gitconfig
@@ -2,9 +2,9 @@
   name = kadin van valin
   email = kadin@kadin.codes
 [includeIf "gitdir:~/gitlab.cj.dev/"]
-    path = ~/work/.gitconfig
+   path = ~/work/.gitconfig
 [fetch]
-    prune = true
+   prune = true
 [core]
   editor = hx
   excludesfile = ~/.gitignore
@@ -27,15 +27,33 @@
 [difftool]
   prompt = false
 [alias]
-  a    = add
-  st   = status -sb
-  co   = checkout
-  df   = diff
-  pl   = pull
+  s = status
+  a = !git add . && git status
+  au = !git add -u . && git status
+  aa = !git add . && git add -u . && git status
+  c = commit
+  cm = commit -m
+  ca = commit --amend # careful
+  ac = !git add . && git commit
+  acm = !git add . && git commit -m
+  l = log --graph --all --pretty=format:'%C(yellow)%h%C(cyan)%d%Creset %s %C(white)- %an, %ar%Creset'
+  ll = log --stat --abbrev-commit
+  lg = log --color --graph --pretty=format:'%C(bold white)%h%Creset -%C(bold green)%d%Creset %s %C(bold green)(%cr)%Creset %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
+  llg = log --color --graph --pretty=format:'%C(bold white)%H %d%Creset%n%s%n%+b%C(bold blue)%an <%ae>%Creset %C(bold green)%cr (%ci)' --abbrev-commit
+  d = diff
+  master = checkout master
+  spull = svn rebase
+  spush = svn dcommit
+  alias = !git config --list | grep 'alias\\.' | sed 's/alias\\.\\([^=]*\\)=\\(.*\\)/\\1\\\t => \\2/' | sort
+  a   = add
+  st  = status -sb
+  co  = checkout
+  df  = diff
+  pl  = pull
   pushu = push -u origin HEAD
-  ps   = push
+  ps  = push
   undo = reset --soft HEAD^
-  f    = fetch
+  f   = fetch
   sta  = stash
   stap = stash apply
   uall = reset .
