--- a/.amethyst.yml
+++ b/.amethyst.yml
@@ -17,16 +17,16 @@ layouts:
   - widescreen-tall-right
   - bsp
 
-# Add "command" to the default mods
+# Keep default mods
 mod1:
   - option
   - shift
-  - command
+#  - command
 mod2:
   - option
   - shift
   - control
-  - command
+#  - command
 
 # Modify the amethyst relaunch to use x and not z
 relaunch-amethyst:
@@ -34,7 +34,7 @@ relaunch-amethyst:
   key: x
 
 # Enable focus-follows-mouse
-mouse-follows-focus: false
+#mouse-follows-focus: false
 focus-follows-mouse: true
 
 # Add 10px margin between windows
