--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,10 @@ Thumbs.db
 !.colima/colima.yml
 .local/share
 .config/coc
+ .config/configstore/update-notifier-nodemon.json
+        .config/fish/config.fish.pysave
+        .config/neofetch/
+        .local/bin/access-aws.sh
+        .local/bin/aws-access
+        .local/bin/zellij-sessionizer
+        .local/state/
