--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,6 +11,9 @@ bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft=
 set -g base-index 1
 set-window-option -g mode-keys vi
 bind C-b last-window
+# Alternate bind for new-window, <prefix>-t defaults to clock.
+unbind-key t
+bind-key C-t new-window
 bind C-h resize-pane -L 5
 bind C-j resize-pane -D 5
 bind C-k resize-pane -U 5
@@ -18,7 +21,11 @@ bind C-l resize-pane -R 5
 bind C-n next-window
 bind C-p previous-window
 
-
+# Set status bar
+set -g status-bg black
+set -g status-fg white
+set -g status-left ""
+set -g status-right "#[fg=green]#H"
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
