--- a/.config/alacritty.toml
+++ b/.config/alacritty.toml
@@ -62,8 +62,8 @@ bindings = [
 	{ key = "W",       mods = "Command",       chars = "\u0002x" }, # tmux close tab 
 	{ key = 33,       mods = "Command|Shift",       chars = "\u0002p" }, # tmux previous tab RBracket and RBracket seem to currently be broken 
 	{ key = 30,       mods = "Command|Shift",       chars = "\u0002n" }, # tmux next tab 
-	{ key: 33,	 mods: "Command", chars: "\u000f" } # navigate back in vim (ctrl+o)
-	{ key: 30,       mods: "Command", chars: "\u0009" } # navigate forward in vim (ctrl+i)
+	{ key = 33,	 mods = "Command", chars = "\u000f" }, # navigate back in vim (ctrl+o)
+	{ key = 30,       mods = "Command", chars = "\u0009" } # navigate forward in vim (ctrl+i)
 ]
 [mouse]
 hide_when_typing = true
