--- a/.tmux.conf
+++ b/.tmux.conf
@@ -79,7 +79,10 @@ set -g message-style 'fg=colour232 bg=colour16 bold'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-
+set -g @plugin 'catppuccin/tmux'
+set -g @catppuccin_status_modules_right "directory"
+set -g @catppuccin_directory_text "#{pane_current_path}"
+set -g @catppuccin_directory_icon "  "
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'github_username/plugin_name#branch'
