--- a/.tmux.conf
+++ b/.tmux.conf
@@ -83,6 +83,7 @@ set -g @plugin 'catppuccin/tmux'
 set -g @catppuccin_status_modules_right "directory"
 set -g @catppuccin_directory_text "#{pane_current_path}"
 set -g @catppuccin_directory_icon "  "
+set -g @catppuccin_window_default_text "#W"
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'github_username/plugin_name#branch'
