[main] update to zsh and add metals lsp

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-set-option -g default-shell /usr/local/bin/fish
+set-option -g default-shell /bin/zsh
 # remap prefix from 'C-a' to 'C-b'
 unbind C-a
 set-option -g prefix C-b
