--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,6 +5,11 @@ set-option -g prefix C-b
 bind-key C-b send-prefix
 set -g mouse on
 
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+bind P paste-buffer
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
+
 
 # split panes using | and -
 bind | split-window -h
