--- a/.config/alacritty.toml
+++ b/.config/alacritty.toml
@@ -32,19 +32,20 @@ TERM = "xterm-256color"
 size = 15.0
 
 [font.bold]
-family = "Comic Code Ligatures"
+family = "Hack Nerd Font Mono"
+# family = "Comic Code Ligatures"
 style = "Bold"
 
 [font.bold_italic]
-family = "Comic Code Ligatures"
+family = "Hack Nerd Font Mono"
 style = "Bold Italic"
 
 [font.italic]
-family = "Comic Code Ligatures"
+family = "Hack Nerd Font Mono"
 style = "Italic"
 
 [font.normal]
-family = "Comic Code Ligatures"
+family = "Hack Nerd Font Mono"
 style = "Regular"
 
 [font.offset]
@@ -53,16 +54,16 @@ y = 1
 
 [keyboard]
 bindings = [
-	{ key = "Key1",     mods = "Command",       chars = "\u00021" }, # tmux tab 1
-	{ key = "Key2",     mods = "Command",       chars = "\u00022" }, # tmux tab 2
-	{ key = "Key3",     mods = "Command",       chars = "\u00023" }, # tmux tab 3
-	{ key = "Key4",     mods = "Command",       chars = "\u00024" }, # tmux tab 4
-	{ key = "T",       mods = "Command",       chars = "\u0002c" }, # tmux new tab 
-	{ key = "W",       mods = "Command",       chars = "\u0002x" }, # tmux close tab 
-	{ key = 33,       mods = "Command|Shift",       chars = "\u0002p" }, # tmux previous tab RBracket and RBracket seem to currently be broken 
-	{ key = 30,       mods = "Command|Shift",       chars = "\u0002n" }, # tmux next tab 
-	{ key = 33,	 mods = "Command", chars = "\u000f" }, # navigate back in vim (ctrl+o)
-	{ key = 30,       mods = "Command", chars = "\u0009" } # navigate forward in vim (ctrl+i)
+{ key = "Key1",     mods = "Command",       chars = "\u00021" }, # tmux tab 1
+{ key = "Key2",     mods = "Command",       chars = "\u00022" }, # tmux tab 2
+{ key = "Key3",     mods = "Command",       chars = "\u00023" }, # tmux tab 3
+{ key = "Key4",     mods = "Command",       chars = "\u00024" }, # tmux tab 4
+{ key = "T",       mods = "Command",       chars = "\u0002c" }, # tmux new tab
+{ key = "W",       mods = "Command",       chars = "\u0002x" }, # tmux close tab
+{ key = 33,       mods = "Command|Shift",       chars = "\u0002p" }, # tmux previous tab RBracket and RBracket seem to currently be broken
+{ key = 30,       mods = "Command|Shift",       chars = "\u0002n" }, # tmux next tab
+{ key = 33,	 mods = "Command", chars = "\u000f" }, # navigate back in vim (ctrl+o)
+{ key = 30,       mods = "Command", chars = "\u0009" } # navigate forward in vim (ctrl+i)
 ]
 [mouse]
 hide_when_typing = true
@@ -70,7 +71,7 @@ hide_when_typing = true
 [scrolling]
 history = 5000
 
-[shell]
+[terminal.shell]
 program = "/bin/zsh"
 
 [window]
