--- a/.tmux.conf
+++ b/.tmux.conf
@@ -79,7 +79,8 @@ setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244
 setw -g window-status-bell-style 'fg=colour255 bg=colour1 bold'
 
 # messages
-set -g message-style 'fg=colour232 bg=colour16 bold'
+# set -g message-style 'fg=colour232 bg=colour16 bold'
+set -g message-style "fg=white,bg=blue"
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
