--- a/.aerospace.toml
+++ b/.aerospace.toml
@@ -78,7 +78,8 @@ inner.horizontal = 0
 inner.vertical =   0
 outer.left =       10
 outer.bottom =     10
-outer.top =       59
+# outer.top =       59
+outer.top =   [{ monitor."^built-in retina display$" = 30 }, 10]
 outer.right =      10
 
 # 'main' binding mode declaration
