--- a/.aerospace.toml
+++ b/.aerospace.toml
@@ -119,7 +119,7 @@ alt-c = 'exec-and-forget open -a /Applications/IntelliJ\ IDEA.app'
 alt-n = 'exec-and-forget open -a /Applications/Obsidian.app'
 # See: https://nikitabobko.github.io/AeroSpace/commands#layout
 alt-slash = 'layout tiles horizontal vertical'
-alt-comma = 'layout accordion horizontal vertical'
+alt-comma = 'layout h_accordion'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#focus
 alt-h = 'focus left'
@@ -241,3 +241,16 @@ shift-down = ['volume set 0', 'mode main']
 "8" = "3"
 "9" = "3"
 # "P" = 2
+
+[[on-window-detected]]
+if.app-id = 'org.alacritty'
+run = ['move-node-to-workspace 1']
+[[on-window-detected]]
+if.app-id = 'company.thebrowser.Browser'
+run = ['move-node-to-workspace 2']
+
+[[on-window-detected]]
+if.app-id = 'com.jetbrains.intellij'
+run = ['move-node-to-workspace 3']
+
+
