--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,7 +9,10 @@ bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
 bind P paste-buffer
 bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
-
+## disable scroll history
+unbind -n MouseDrag1Pane
+unbind -n MouseDown2Pane
+unbind -n MouseDragEnd1Pane
 
 # split panes using | and -
 bind | split-window -h
