--- a/.aerospace.toml
+++ b/.aerospace.toml
@@ -63,6 +63,8 @@ automatically-unhide-macos-hidden-apps = true
 # See https://nikitabobko.github.io/AeroSpace/guide#key-mapping
 [key-mapping]
 preset = 'qwerty'
+# Define my fancy unicorn key notation
+#key-notation-to-key-code.unicorn = 'u'
 
 # Gaps between windows (inner-*) and between monitor edges (outer-*).
 # Possible values:
@@ -85,7 +87,7 @@ outer.right =      10
 # 'main' binding mode must be always presented
 # Fallback value (if you omit the key): mode.main.binding = {}
 [mode.main.binding]
-
+#alt-unicorn = 'workspace wonderland' # (⁀ᗢ⁀)
 # All possible keys:
 # - Letters.        a, b, c, ..., z
 # - Numbers.        0, 1, 2, ..., 9
@@ -112,11 +114,12 @@ outer.right =      10
 #     activate
 # end tell'
 # '''
-alt-b = 'exec-and-forget open -a /Applications/Arc.app'
-alt-t = 'exec-and-forget open -a /Applications/Alacritty.app'
-alt-s = 'exec-and-forget open -a /Applications/Slack.app'
-alt-c = 'exec-and-forget open -a /Applications/IntelliJ\ IDEA.app'
-alt-n = 'exec-and-forget open -a /Applications/Obsidian.app'
+#alt-b = 'exec-and-forget open -a /Applications/Arc.app'
+#alt-t = 'exec-and-forget open -a /Applications/Alacritty.app'
+
+#alt-i = 'exec-and-forget open -a /Applications/IntelliJ\ IDEA.app'
+#alt-s = 'exec-and-forget open -a /Applications/Slack.app'
+#alt-o = 'exec-and-forget open -a /Applications/Obsidian.app'
 # See: https://nikitabobko.github.io/AeroSpace/commands#layout
 alt-slash = 'layout tiles horizontal vertical'
 alt-comma = 'layout h_accordion'
@@ -144,9 +147,9 @@ alt-3 = 'workspace 3'
 alt-4 = 'workspace 4'
 alt-5 = 'workspace 5'
 alt-6 = 'workspace 6'
-alt-7 = 'workspace 7'
-alt-8 = 'workspace 8'
-alt-9 = 'workspace 9'
+#alt-7 = 'workspace 7'
+#alt-8 = 'workspace 8'
+#alt-9 = 'workspace 9'
 # alt-a = 'workspace A' # In your config, you can drop workspace bindings that you don't need
 # alt-b = 'workspace B'
 # alt-c = 'workspace C'
@@ -157,11 +160,11 @@ alt-9 = 'workspace 9'
 # alt-i = 'workspace I'
 # alt-m = 'workspace M'
 # alt-n = 'workspace N'
-# alt-o = 'workspace O'
+ alt-o = 'workspace o'
 # alt-p = 'workspace P'
 # alt-q = 'workspace Q'
 # alt-r = 'workspace R'
-# alt-s = 'workspace S'
+ alt-s = 'workspace s'
 # alt-t = 'workspace T'
 # alt-u = 'workspace U'
 # alt-v = 'workspace V'
@@ -177,9 +180,9 @@ alt-shift-3 = 'move-node-to-workspace 3'
 alt-shift-4 = 'move-node-to-workspace 4'
 alt-shift-5 = 'move-node-to-workspace 5'
 alt-shift-6 = 'move-node-to-workspace 6'
-alt-shift-7 = 'move-node-to-workspace 7'
-alt-shift-8 = 'move-node-to-workspace 8'
-alt-shift-9 = 'move-node-to-workspace 9'
+#alt-shift-7 = 'move-node-to-workspace 7'
+#alt-shift-8 = 'move-node-to-workspace 8'
+#alt-shift-9 = 'move-node-to-workspace 9'
 # alt-shift-a = 'move-node-to-workspace A'
 # alt-shift-b = 'move-node-to-workspace B'
 # alt-shift-c = 'move-node-to-workspace C'
@@ -190,11 +193,11 @@ alt-shift-9 = 'move-node-to-workspace 9'
 # alt-shift-i = 'move-node-to-workspace I'
 # alt-shift-m = 'move-node-to-workspace M'
 # alt-shift-n = 'move-node-to-workspace N'
-# alt-shift-o = 'move-node-to-workspace O'
+ alt-shift-o = 'move-node-to-workspace o'
 # alt-shift-p = 'move-node-to-workspace P'
 # alt-shift-q = 'move-node-to-workspace Q'
 # alt-shift-r = 'move-node-to-workspace R'
-# alt-shift-s = 'move-node-to-workspace S'
+ alt-shift-s = 'move-node-to-workspace o'
 # alt-shift-t = 'move-node-to-workspace T'
 # alt-shift-u = 'move-node-to-workspace U'
 # alt-shift-v = 'move-node-to-workspace V'
@@ -234,14 +237,17 @@ shift-down = ['volume set 0', 'mode main']
 "1" = "1"
 "2" = "1"
 "3" = "1"
-"4" = "2"
-"5" = "2"
+"4" = "1"
+"5" = "1"
 "6" = "2"
-"7" = "3"
-"8" = "3"
-"9" = "3"
+"7" = "2"
+"s" = '^built-in retina display$'
+"o" = '^built-in retina display$'
+#"8" = "3"
+#"9" = "3"
 # "P" = 2
 
+# aerospace list-apps
 [[on-window-detected]]
 if.app-id = 'org.alacritty'
 run = ['move-node-to-workspace 1']
@@ -253,4 +259,10 @@ run = ['move-node-to-workspace 2']
 if.app-id = 'com.jetbrains.intellij'
 run = ['move-node-to-workspace 3']
 
+[[on-window-detected]]
+if.app-id = 'md.obsidian'
+run = ['move-node-to-workspace o']
 
+[[on-window-detected]]
+if.app-id = 'com.tinyspeck.slackmacgap'
+run = ['move-node-to-workspace s']
